--- a/template.Rmd
+++ b/template.Rmd
@@ -3,7 +3,7 @@ title: "Tint Is Not Tufte"
 subtitle: "An implementation in R Markdown"
 author: "JJ Allaire, Yihui Xie, Dirk Eddelbuettel"
 date: "`r Sys.Date()`"
-output: tint::tintHtml
+output: tint::tintPdf
 bibliography: skeleton.bib
 link-citations: yes
 ---
