--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -34,7 +34,7 @@ output:
 
 ## Using the `tikz` engine (2)
 
-```{r tikz-ex, engine = "tikz", fig.cap = "Funky tikz", fig.ext = if (knitr:::is_latex_output()) 'pdf' else 'svg', fig.width=5, echo=FALSE, cache=TRUE}
+```{r tikz-ex, engine = "tikz", fig.cap = "Seismic focal mechanism in 3D view", fig.ext = if (knitr:::is_latex_output()) 'pdf' else 'svg', fig.width=5, echo=FALSE, cache=TRUE}
 %: see http://www.texample.net/tikz/examples/seismic-focal-mechanism-in-3d-view/
 %% helper macros
 %: Styles for XYZ-Coordinate Systems
@@ -134,7 +134,7 @@ output:
 
 ## Using `tikzDevice`
 
-```{r,engine='tikz',fig.ext = if (knitr:::is_latex_output()) 'pdf' else 'svg', fig.width=10, echo=FALSE, cache=TRUE}
+```{r,engine='tikz', fig.cap="TeXtronics oscilloscope", fig.ext = if (knitr:::is_latex_output()) 'pdf' else 'svg', fig.width=10, echo=FALSE, cache=TRUE}
 %: see http://www.texample.net/tikz/examples/textronics-oscilloscope/
 \def\scl{0.6}%scaling factor of the picture
 \begin{tikzpicture}[
